@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Give the price in coins instead of platinum only.
+Nicolas Weeger 2010-01-09
+
 Export query_cost_string and cost_string_from_value to plugins.
 Nicolas Weeger 2010-01-09
 
